<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:gravity="center"
android:orientation="vertical"
android:layout_height="match_parent"
tools:context="com.example.fernanda.trabalho1.ui.CadastroReservaActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:textAllCaps="true"
    android:layout_marginBottom="10dp"
    android:text="@string/cadastro_reservas_title"/>

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_marginBottom="5dp"
    android:layout_height="wrap_content">

    <Spinner
        android:id="@+id/et_livro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cadastro_reservas_hint_livro"/>

    <Spinner
        android:id="@+id/et_pessoa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textAutoComplete"
        android:hint="@string/cadastro_reservas_hint_pessoa"/>

</LinearLayout>

<Button
    android:id="@+id/btn_cadastrar_reserva"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/all_cadastrar"/>

</LinearLayout>