<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="com.example.fernanda.trabalho1.ui.CadastroPessoaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginBottom="10dp"
        android:text="@string/cadastro_pessoas_title"/>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:padding="10dp"
        android:layout_marginBottom="5dp"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/et_pessoa_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/cadastro_pessoa_hint_nome"/>

        <EditText
            android:id="@+id/et_pessoa_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/cadastro_pessoa_hint_email"/>
    </LinearLayout>

    <Button
        android:id="@+id/btn_cadastrar_pessoa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_cadastrar"/>

</LinearLayout>
